--- a/index.html
+++ b/index.html
@@ -5,8 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <h1>The Weeknd</h1>
+        <h3><i>Take My Breath</i></h3>
+    </header>
+    <section>
+        <p>I saw the fire in your eyes I saw the fire when I look into your eyes You tell me things you wanna try (Uh) I know temptation is the devil in disguise You risk it all to feel alive, oh yeah You're offering yourself to me like sacrifice You said you do this all the time Tell me you love me if I bring you to the light
+        </p>
+        <p>It's like a dream what she feels with me She loves to be on the edge Her fantasy is okay with me Then suddenly, baby says
+        </p>
+        <p>Take my breath away And make it last forever, babe Do it now or never, babe (Ah) Take my breath away Nobody does it better, babe Bring me close to—
+        </p>
+        <p>Want me to hold onto you tight You pull me closer, feel the heat between your thighs (Uh, say) You're way too young to end your life (Huh) Girl, I don't wanna be the one who pays the price
+        </p>
+    </section>
 </body>
 </html>
